--- a/TestApp/pubspec.yaml
+++ b/TestApp/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   web_socket_channel: ^1.1.0
   sensors: ^0.4.2+6
   control_pad: ^1.1.1+1
+  provider: ^4.3.3
+
   
 
 dev_dependencies:
@@ -49,9 +51,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - up.png
+    - down.png
+    - left.png
+    - right.png
+    - white.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
