--- a/webclient/package.json
+++ b/webclient/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve --port 8083",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "serve -l tcp://0.0.0.0:8083"
   },
   "dependencies": {
     "core-js": "^3.6.5",
