--- a/TestApp/pubspec.yaml
+++ b/TestApp/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   sensors: ^0.4.2+6
   provider: ^4.3.3
   web_socket_channel: ^1.2.0  
+  wakelock: ^0.1.3+4
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +54,7 @@ flutter:
     - left.png
     - right.png
     - white.png
+    - crab.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
