getting the app ready for the Play Store

--- a/TestApp/pubspec.yaml
+++ b/TestApp/pubspec.yaml
@@ -33,8 +33,15 @@ dependencies:
   wakelock: ^0.1.3+4
 
 dev_dependencies:
+  change_app_package_name: ^0.1.3
+  flutter_launcher_icons: ^0.7.1
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/crab1.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
