--- a/TestApp/pubspec.yaml
+++ b/TestApp/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   provider: ^4.3.3
   web_socket_channel: ^1.2.0  
   wakelock: ^0.1.3+4
+  image: ^2.1.19
+  permission_handler: ^5.1.0+2
+  path_provider: ^1.6.28
+  gallery_saver: ^2.0.3
 
 dev_dependencies:
   change_app_package_name: ^0.1.3
@@ -70,6 +74,7 @@ flutter:
     - crab6.png
     - background.png
     - shake.png
+    - savebg.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
